--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URL = mongodb+srv://rajivpathak199:rajiv199@cluster0.m6krzpo.mongodb.net/userdata
+MONGO_URL =
 PORT = 2000
-JWT_SECRET = nvf8tu4d48nd49utdnd4tu4m985t
+JWT_SECRET = 
